# shape

genshape-del-dist/: CMakeLists.txt  notes
genshape-del-dist/src/: CMakeLists.txt  main.cpp
genshape-del-dist/src/old/: main.cpp
